config/base/derive/tests/ui_fail/invalid_attrs_no_comma_between_attrs.stderr
error: expected ',' or '='
 --> tests/ui_fail/invalid_attrs_no_comma_between_attrs.rs:5:22
  |
5 |     #[config(default env = "1234")]
  |                      ^^^
