config/base/derive/tests/ui_fail/invalid_attrs_no_comma_between_attrs.rs
use iroha_config_base::ReadConfig;

#[derive(ReadConfig)]
struct Test {
    #[config(default env = "1234")]
    foo: u64,
}

pub fn main() {}
